2006-02-03 aurel
* modify Base_getWorkflowHistoryItemList

2006-02-02 aurel
* modify Base_getWorkflowHistorySectionList and Base_viewWorkflowHistory

2006-02-01 kevin
* Delete all jump menus defined on Organisation module: they are just shortcuts to other modules.
* Same on Person module.
* Reorder Bank Account tabs.

2006-02-01 aurel
* add parameters to script TemplateTool_downloadRepositoryBusinessTemplateList

2006-02-01 jerome
* catch validation faileds on workflow validations and put them in portal status message

2006-02-01 aurel
* modify Base_callViewDialogMethod

2006-01-31 jerome
* implement preference workflow the right way, fix a bug in a guard.

2006-01-31 aurel
* change my by your in some TemplateTool skins and modify Base_callDialogMethod to take this change into account

2006-01-31 aurel
* fix compution of number of column in index_html

2006-01-31 jerome
* quick hack to make listbox rendering in report tree / domain tree work again.

2006-01-31 aurel
* fix TemplateTool_installBusinessTemplateListAction

2006-01-31 Kevin
* add **kw parameter to TemplateTool_installRepositoryBusinessTemplateList

2006-01-31 yo
* Fix OrganisationModule_viewOrganisationList and PersonModule_viewPersonList to use translated titles or plain titles.

2006-01-30 jerome
* added support for workflow validation in list mode (see Accounting Transaction Module for an example of how to use it)

2006-01-30 jerome
* modify Organisation_viewDetails to add a listbox for Accounting Periods.

2006-01-30 aurel
* change name of some actions

2006-01-27 aurel
* add action to create module

2006-01-26 Jerome
* added Base_uniqueReferenceInFolderValidator python script for my_reference fields validators.
* make sure two currencies with the same reference do not exist.

2006-01-26 Romain
* modify Base_edit to call field_editor after saving the matrixbox.

2006-01-26 Aurel
* add some actions

2006-01-23 Alex
* simplified Bank Accounts
* added support for Portal Type Role Definitions
